Fri Dec 29 04:06:26 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - drivers/Makefile.am: fixed HAL build logic

Fri Dec 29 01:32:29 UTC 2006 / Charles Lepple <clepple@gmail.com>

 - man/snmp-ups.8, man/bcmxcp_usb.8, man/skel.8, man/newhidups.8,
   man/apcsmart.8, man/Makefile.am: Updated man pages, and added a skeleton
   page for new drivers.

Thu Dec 28 19:52:58 UTC 2006 / Arjen de Korte <arjen@de-korte.org>

 - common/state.c: use the state functions from common where possible
   to ease maintenance

Thu Dec 28 19:44:29 UTC 2006 / Arjen de Korte <arjen@de-korte.org>

 - drivers/hal-dstate.ch: C++ style comments are not allowed in ISO C90

Thu Dec 28 14:18:50 UTC 2006 / Arjen de Korte <arjen@de-korte.org>

 - common/state.c: rewrote several function to use recursion (to make
   checking for logical errors easier)

Thu Dec 28 06:10:51 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - configure.in: added LIBUSB check to HAL configuration
 - configure.in: made checks for usb/hal/snmp prerequisites unconditional

Wed Dec 27 06:36:12 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - configure.in: wrote NUT-specific autoconf macros to check for
   compiler flags for libraries. These macros are documented in
   docs/macros.txt.

Wed Dec 27 04:17:07 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - configure.in: renamed automake installation directories to their
   standard names: driverexecdir, cgiexecdir, htmldir, pkgcfgdir
 - automake: removed @...@ substitutions from Makefile.am's

Wed Dec 27 03:36:50 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - automake: fixes to HAL automake rules
 - configure.in: more uniform naming of variables

Wed Dec 27 01:37:53 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - configure.in: improved automatic feature detection; USB, SNMP, HAL,
   SSL features are now built by default if prerequisites are present;