@@ -1,3 +1,8 @@
+Fri Dec 29 06:32:21 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>
+
+ - configure.in: added selected drivers to feature summary, if any
+ - configure.in: cosmetic simplifications
+
 Fri Dec 29 04:06:26 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>
 
  - drivers/Makefile.am: fixed HAL build logic
